--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^24.7.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fractalliter/composer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fractalliter/composer/issues"
+  },
+  "homepage": "https://github.com/fractalliter/composer"
 }
